# cudaCxxCmakeSetup

./: CMakeLists.txt  cmake-rebuild.sh
inc/: cuda.h  helper.h  pch.h
src/: main.cu  main.cxx
